# advent-of-code

./: .gitignore  Makefile
aoc2019/: pyproject.toml
aoc2019/aoc2019/: __init__.py  _common.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_22.py  intcode.py
aoc2019/tests/: test_aoc2019.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
day-01/: pyproject.toml
day-01/day_01/: main.py
day-01/tests/: test_day_01.py
day-02/: README.rst  pyproject.toml
day-02/day_02/: intcode.py  main.py
day-02/tests/: test_day_02.py
day-03/: pyproject.toml
day-03/day_03/: main.py
day-03/tests/: test_day_03.py
day-04/: pyproject.toml
day-04/day_04/: main.py
day-04/tests/: test_day_04.py
day-05/: pyproject.toml
day-05/day_05/: main.py
day-06/: pyproject.toml
day-06/day_06/: main.py
day-06/tests/: test_day_06.py
day-07/: README.rst  pyproject.toml
day-07/day_07/: main.py
day-07/tests/: test_day_07.py
day-08/: pyproject.toml
day-08/day_08/: main.py
day-08/tests/: test_day_08.py
day-09/: README.rst  pyproject.toml
day-09/tests/: test_day_09.py
day-10/: README.rst  pyproject.toml
day-10/tests/: test_day_10.py
