[tool.poetry]
name = "aoc2019"
version = "0.1.0"
description = ""
authors = ["Ryan Hill <ryan.hill@adtran.com>"]

[tool.poetry.scripts]
day01p1 = "aoc2019.day_01:part1"
day01p2 = "aoc2019.day_01:part2"
day02p1 = "aoc2019.day_02:part1"
day02p2 = "aoc2019.day_02:part2"
day03p1 = "aoc2019.day_03:part1"
day03p2 = "aoc2019.day_03:part2"
day04p1 = "aoc2019.day_04:part1"
day04p2 = "aoc2019.day_04:part2"
day05p1 = "aoc2019.day_05:part1"
day05p2 = "aoc2019.day_05:part2"
day06p1 = "aoc2019.day_06:part1"
day06p2 = "aoc2019.day_06:part2"
day07p1 = "aoc2019.day_07:part1"
day07p2 = "aoc2019.day_07:part2"
day08p1 = "aoc2019.day_08:part1"
day08p2 = "aoc2019.day_08:part2"
day09p1 = "aoc2019.day_09:part1"
day09p2 = "aoc2019.day_09:part2"
day10p1 = "aoc2019.day_10:part1"
day10p2 = "aoc2019.day_10:part2"
day11p1 = "aoc2019.day_11:part1"
day11p2 = "aoc2019.day_11:part2"
day12p1 = "aoc2019.day_12:part1"
day12p2 = "aoc2019.day_12:part2"
day13p1 = "aoc2019.day_13:part1"
day13p2 = "aoc2019.day_13:part2"
day14p1 = "aoc2019.day_14:part1"
day14p2 = "aoc2019.day_14:part2"
day15p1 = "aoc2019.day_15:part1"
day15p2 = "aoc2019.day_15:part2"
day16p1 = "aoc2019.day_16:part1"
day16p2 = "aoc2019.day_16:part2"
day17p1 = "aoc2019.day_17:part1"
day17p2 = "aoc2019.day_17:part2"
day18p1 = "aoc2019.day_18:part1"
day18p2 = "aoc2019.day_18:part2"
day19p1 = "aoc2019.day_19:part1"
day19p2 = "aoc2019.day_19:part2"
day20p1 = "aoc2019.day_20:part1"
day20p2 = "aoc2019.day_20:part2"
day21p1 = "aoc2019.day_21:part1"
day21p2 = "aoc2019.day_21:part2"
day22p1 = "aoc2019.day_22:part1"
day22p2 = "aoc2019.day_22:part2"
day23p1 = "aoc2019.day_23:part1"
day23p2 = "aoc2019.day_23:part2"
day24p1 = "aoc2019.day_24:part1"
day24p2 = "aoc2019.day_24:part2"
day25p1 = "aoc2019.day_25:part1"
day25p2 = "aoc2019.day_25:part2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
