[tool.poetry]
name = "day-03"
version = "0.1.0"
description = ""
authors = ["Ryan Hill <rthill91@gmail.com>"]

[tool.poetry.scripts]
aoc1 = "day_03.main:part1"
aoc2 = "day_03.main:part2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
