[tool.poetry]
name = "day-06"
version = "0.1.0"
description = ""
authors = ["Ryan Hill <ryan.hill@adtran.com>"]

[tool.poetry.scripts]
aoc1 = "day_06.main:part1"
aoc2 = "day_06.main:part2"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
